--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,7 +24,7 @@ extra_css:
 
 use_directory_urls: false
 
-repo_url: https://dev.mm-bbs.de/Neumann/kdm_lf12
+repo_url: https://github.com/herr-nm/KDM-LF12.git
 
 nav:
     - Einleitung zum LF12: 'index.md'
