--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,7 +13,8 @@ markdown_extensions:
   - pymdownx.superfences
 
 plugins:
-  - include-markdown 
+  - include-markdown
+  - encryptcontent: {}
 
 extra_css:
   - 'extra.css'
@@ -32,5 +33,6 @@ nav:
     - Kapitel 03 - Unternehmen und ihre Geschäftsmodelle quantitativ auswerten: 'kapitel_03.md'
     - Kapitel 04 - Geschäftsprozesse und -modelle weiterentwickeln: 'kapitel_04.md'
     - Kapitel 05 - Digitale Produkte managen: 'kapitel_05.md'
+    - Lösungen: 'loesungen.md'
     
 
